[FIX] Update extract logic and UX for user to select what prompt what to use in default

--- a/ocr_manager/views/res_company_views.xml
+++ b/ocr_manager/views/res_company_views.xml
@@ -15,6 +15,7 @@
                             <field name="ocr_provider"/>
                             <field name="ocr_api_key" password="True"/>
                             <field name="ocr_ai_model"/>
+                            <field name="ocr_prompt_id" options="{'no_create': True}"/>
                         </group>
                     </group>
                 </page>
